# src_box_bot

my_box_bot_description/: CMakeLists.txt  package.xml
my_box_bot_description/launch/: publish_urdf.launch.py
my_box_bot_description/scripts/: angular_vel_node.py  wrench_node.py
my_box_bot_description/urdf/: box_bot_basic.urdf
my_box_bot_gazebo/: package.xml
my_box_bot_gazebo/worlds/: box_bot_empty.world
